--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -19,6 +19,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
@@ -26,7 +27,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
@@ -50,14 +51,16 @@
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-themes": "^0.4.3",
+    "nprogress": "^0.2.0",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-aria-components": "^1.4.1",
     "react-datepicker": "^7.5.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.56.4",
     "react-phone-number-input": "^3.4.9",
+    "react-places-autocomplete": "^7.3.0",
     "react-query": "^3.39.3",
     "react-select": "^5.8.3",
     "react-use": "^17.5.1",
@@ -67,7 +70,8 @@
     "tailwindcss-animate": "^1.0.7",
     "use-query-params": "^2.2.1",
     "xlsx": "^0.18.5",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zod": "^3.25.20"
   },
   "devDependencies": {
     "@types/node": "^20",
