--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "react-aria-components": "^1.4.1",
     "reflect-metadata": "^0.2.2",
     "slug": "^10.0.0",
+    "stripe": "^18.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
