--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -33,9 +34,12 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.12.1",
     "@remixicon/react": "^4.6.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/google.maps": "^3.58.1",
+    "D": "^1.0.0",
     "axios": "^1.7.7",
     "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.1",
@@ -58,6 +62,7 @@
     "react-datepicker": "^7.5.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-google-autocomplete": "^2.7.5",
     "react-hook-form": "^7.56.4",
     "react-phone-number-input": "^3.4.9",
     "react-places-autocomplete": "^7.3.0",
