--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.1.0",
     "nodemailer": "^6.10.0",
     "otp-generator": "^4.0.1",
     "paypack-js": "^0.2.1",
